Configurando timeout en Zuul API Gateway

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,17 +1,22 @@
 spring.application.name=servicio-zuul-server
 # 8090, puerto por defecto que se usa para los servidores API Gateway: Zuul, Spring Cloud Gateway, etc.. 
-# se puede usar otro puerto, pero idealmente el 8090, es como un estándar
+# se puede usar otro puerto, pero idealmente el 8090, es como un estï¿½ndar
 server.port=8090
 
 eureka.client.service-url.defaultZone=http://127.0.0.1:8761/eureka
 
-# Configuramos el enrutado dinámico de cada microservicio. 
+# Configuramos el enrutado dinï¿½mico de cada microservicio. 
 # Cada ruta base debe ir asociado al nombre del servicio.
 # puede ir servicio-productos (zuul.routes.servicio-productos.service-id), 
-# nosotros lo dejamos más simple, solo como ...productos...
+# nosotros lo dejamos mï¿½s simple, solo como ...productos...
 zuul.routes.productos.service-id=servicio-productos
 # definimos el path base del microservicio
 zuul.routes.productos.path=/api/productos/**
 
 zuul.routes.items.service-id=servicio-item
 zuul.routes.items.path=/api/items/**
+
+# Tener encuenta que hystrix envuelve a ribbon, entonces lo ideal es que hystrix tenga un tiempo superior a ribbon
+#hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds: 20000
+#ribbon.ConnectTimeout: 3000
+#ribbon.ReadTimeout: 10000
