--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,6 +16,9 @@ zuul.routes.productos.path=/api/productos/**
 zuul.routes.items.service-id=servicio-item
 zuul.routes.items.path=/api/items/**
 
+zuul.routes.usuarios.service-id=servicio-usuarios
+zuul.routes.usuarios.path=/api/usuarios/**
+
 # Tener encuenta que hystrix envuelve a ribbon, entonces lo ideal es que hystrix tenga un tiempo superior a ribbon
 #hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds: 20000
 #ribbon.ConnectTimeout: 3000
