Probando la autenticación con Postman y obteniendo el token JWT

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,6 +19,11 @@ zuul.routes.items.path=/api/items/**
 zuul.routes.usuarios.service-id=servicio-usuarios
 zuul.routes.usuarios.path=/api/usuarios/**
 
+zuul.routes.security.service-id=servicio-oauth
+zuul.routes.security.path=/api/security/**
+# Excluimos de la cabecera el Cookie y Set-Cookie
+zuul.routes.security.sensitive-headers=Cookie,Set-Cookie
+
 # Tener encuenta que hystrix envuelve a ribbon, entonces lo ideal es que hystrix tenga un tiempo superior a ribbon
 #hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds: 20000
 #ribbon.ConnectTimeout: 3000
