Añadiendo más información al token JWT

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,5 +26,5 @@ zuul.routes.security.sensitive-headers=Cookie,Set-Cookie
 
 # Tener encuenta que hystrix envuelve a ribbon, entonces lo ideal es que hystrix tenga un tiempo superior a ribbon
 #hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds: 20000
-#ribbon.ConnectTimeout: 3000
-#ribbon.ReadTimeout: 10000
+ribbon.ConnectTimeout: 3000
+ribbon.ReadTimeout: 10000
