--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -30,3 +30,6 @@ ribbon.ConnectTimeout: 3000
 ribbon.ReadTimeout: 10000
 
 spring.sleuth.sampler.probability=1.0
+
+spring.zipkin.base-url=http://127.0.0.1:9411/
+spring.zipkin.sender.type=rabbit
