Comentario sobre el timeout en zuul server

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,6 +25,7 @@ zuul.routes.security.path=/api/security/**
 zuul.routes.security.sensitive-headers=Cookie,Set-Cookie
 
 # Tener encuenta que hystrix envuelve a ribbon, entonces lo ideal es que hystrix tenga un tiempo superior a ribbon
+# Con estas tres cofiguraciones manejamos el Timeout con Zuul Server
 hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds: 60000
 ribbon.ConnectTimeout: 9000
 ribbon.ReadTimeout: 30000
